[gd_scene load_steps=5 format=2]

[ext_resource path="res://res/pyrate_theme.tres" type="Theme" id=1]
[ext_resource path="res://niveles/nivel_11_ui/pause_menu.gd" type="Script" id=2]
[ext_resource path="res://niveles/nivel_10_save_system/WindowDialog_slot_dialog.tscn" type="PackedScene" id=3]
[ext_resource path="res://niveles/nivel_11_ui/setup_menu.tscn" type="PackedScene" id=4]

[node name="pause_menu" type="WindowDialog"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -79.5
margin_top = -94.0
margin_right = 79.5
margin_bottom = 94.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -56.0
margin_top = -81.0
margin_right = 56.0
margin_bottom = 81.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 112.0
margin_bottom = 18.0
text = "PAUSE"
align = 1

[node name="HSeparator5" type="HSeparator" parent="VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 22.0
margin_right = 112.0
margin_bottom = 26.0

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 30.0
margin_right = 112.0
margin_bottom = 52.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator3" type="VSeparator" parent="VBoxContainer/HBoxContainer3"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 31.0
margin_bottom = 22.0
size_flags_horizontal = 3

[node name="Button_continue" type="Button" parent="VBoxContainer/HBoxContainer3"]
margin_left = 35.0
margin_right = 77.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "CONTINUE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator4" type="VSeparator" parent="VBoxContainer/HBoxContainer3"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 81.0
margin_right = 112.0
margin_bottom = 22.0
size_flags_horizontal = 3

[node name="HSeparator4" type="HSeparator" parent="VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 56.0
margin_right = 112.0
margin_bottom = 60.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 64.0
margin_right = 112.0
margin_bottom = 86.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_restart_lvl" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 70.0
margin_bottom = 22.0
text = "RESTART LEVEL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 74.0
margin_right = 78.0
margin_bottom = 22.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button_setup" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 82.0
margin_right = 112.0
margin_bottom = 22.0
text = "SETUP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 90.0
margin_right = 112.0
margin_bottom = 94.0

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 98.0
margin_right = 112.0
margin_bottom = 120.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_load_game" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_right = 48.0
margin_bottom = 22.0
text = "LOAD GAME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/HBoxContainer2"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 52.0
margin_right = 62.0
margin_bottom = 22.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button_main_menu" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 66.0
margin_right = 112.0
margin_bottom = 22.0
text = "MAIN MENU"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 124.0
margin_right = 112.0
margin_bottom = 128.0

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 132.0
margin_right = 112.0
margin_bottom = 154.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator3" type="VSeparator" parent="VBoxContainer/HBoxContainer4"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 28.0
margin_bottom = 22.0
size_flags_horizontal = 3

[node name="Button_exit_game" type="Button" parent="VBoxContainer/HBoxContainer4"]
margin_left = 32.0
margin_right = 79.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "EXIT GAME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator4" type="VSeparator" parent="VBoxContainer/HBoxContainer4"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 83.0
margin_right = 112.0
margin_bottom = 22.0
size_flags_horizontal = 3

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 158.0
margin_right = 112.0
margin_bottom = 162.0

[node name="setup_dialog" parent="." instance=ExtResource( 4 )]
margin_left = -201.5
margin_top = -102.5
margin_right = -8.5
margin_bottom = 176.5

[node name="WindowDialog_save" parent="." instance=ExtResource( 3 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -216.0
margin_top = -134.5
margin_right = 216.0
margin_bottom = 134.5

[connection signal="popup_hide" from="." to="." method="_on_pause_menu_popup_hide"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/Button_continue" to="." method="_on_Button_continue_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button_restart_lvl" to="." method="_on_Button_restart_lvl_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button_setup" to="." method="_on_Button_setup_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Button_load_game" to="." method="_on_Button_load_game_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Button_main_menu" to="." method="_on_Button_main_menu_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer4/Button_exit_game" to="." method="_on_Button_exit_game_pressed"]
